--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,4 +1,25 @@
-$dark:grey;
-body{
-    background-color: $dark;
+@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
+@import "~normalize.css";
+
+@import "header";
+@import "toolbar";
+@import "formula";
+@import "table";
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  
 }
+
+body {
+  font-family: 'Roboto', sans-serif;
+  font-size: 12px;
+}
+
+.excel {
+  position: relative;
+}
+
+
